...
                  images: [],
                });
                setErrors({});
              },
            },
            {
              text: 'Done',
              onPress: () => onItemCreated?.(),
              style: 'default',
            },
          ]
        );
      } else {
...
